base/poll-app-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polling-app-client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: polling-app-client
  template:
    metadata:
      labels:
        app: polling-app-client
    spec:
      containers:
      - image: quay.io/elljes/poll-app-client:0.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
        name: polling-app-client
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 0.2
            memory: 300Mi
      imagePullSecrets:
      - name: elljes-docap-pull-secret
