base/poll-app-client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: polling-app-client
spec:
  type: NodePort
  selector:
    app: polling-app-client
  ports:
  - name: http
    port: 80
    targetPort: 8080
