base/poll-app-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: polling-app-server
  labels:
    app: polling-app-server
spec:
  type: NodePort
  selector:
    app: polling-app-server
  ports:
  - name: http
    port: 8080
    targetPort: 8080
